fix: projects view on mobile

--- a/src/scss/layout/home/projects/projectsContainer.scss
+++ b/src/scss/layout/home/projects/projectsContainer.scss
@@ -10,3 +10,9 @@
         padding: 2rem;
     }
 }
+
+@include mobile{
+    .projects-cards-container{
+        flex-direction: column;
+    }
+}
